# ComplexityPositioning

./: CMakeLists.txt
BayesStateEstimate/: BSE.h  CMakeLists.txt
BayesStateEstimate/AuxiliaryTool/: AccMeasurementFunction.h  CSVLoader.h  GravityOrientationFunction.h  ImuTools.cpp  ImuTools.h  ImuUpdateFunction.h  MagGravityMeasurementFunction.h  MagMeasurementFunction.h  SimpleImuUpdateFunction.h  UwbMeasurementFunction.h  UwbTools.cpp  UwbTools.h
BayesStateEstimate/BayesFilter/: BayesFilter.cpp  BayesFilter.h
BayesStateEstimate/BayesFilter/KalmanFilter/: IMUESKF.cpp  IMUESKF.h  IMUWBKF.cpp  IMUWBKF.h  IMUWBKFSimple.cpp  IMUWBKFSimple.h  ImuEkf.h  KFComplex.h  KFComplexFF.h  KFComplexFull.h  KFComplexOpenShoe.h  KalmanFilterBase.cpp  KalmanFilterBase.h  KalmanFilterNonLinearBase.cpp  KalmanFilterNonLinearBase.h  UKFComplex.h  UKFComplexCraft.h  UKFComplexh.h
BayesStateEstimate/BayesFilter/ParticleFilter/: GpuParticleFilter.h  PFComplex.h
BayesStateEstimate/Test/: BJFusionTest.cpp  ESKFIMUUWBTest.cpp  GpuParticleFilter.cpp  KFComplexityImuOnlyTest.cpp  KFComplexityTest.cpp  KalmanFilterSimulatorTester.cpp  KalmanFilterTester.cpp  MonteCarloTester.cpp  MonteCarloTesterCuda.cpp  RotationReliableTester.cpp  UwbOptimizationTest.cpp  XsenseIntegrateTest.cpp  device_test_head.h
ExperimentScripts/: TestDataTester.py  TestZeroVelocityDetector.py  __init__.py
GpuAlgorithm/include/: clion_cuda.h
GpuAlgorithm/src/: test_cu.cu
GraphOptimization/: CMakeLists.txt
GraphOptimization/OwnEdge/: DistanceEdge.cpp  DistanceEdge.h  DistanceEdgeSE2Point2.cpp  DistanceEdgeSE2Point2.h  GravityZ.cpp  HardConstraintIMU.cpp  HardConstraintIMU.h  MaxDistanceEdge.h  OrientationEdge.h  PesudoRansacDistance.h  Plane3dVertex.h  RelativeMagEdge.h  SimpleDistanceEdge.h
GraphOptimization/gtsam_include/: BetweenFactorMaxDistance.h  BoundingDistance.h  DualFeetConstraint.hpp  MaxDistanceConstraint.h  MaxDistanceConstraintPose3.h  MaxRangeExpressionFactor.h  UwbFactor.h
GraphOptimization/gtsam_src/: PDR_UWB_Robust.cpp  gtsam_Dual_Feet_test.cpp  gtsam_GPS_INS_test.cpp  gtsam_Vehicle_INS_UWB_test.cpp  gtsam_ZUPT_UWB_test.cpp  gtsam_ZUPT_test.cpp
GraphOptimization/include/OwnEdge/: DistanceEdge.cpp  DistanceEdge.h  DistanceSE3Line3D.cpp  DistanceSE3Line3D.h  GravityZ.h  Line2D.cpp  Line2D.h  Line3D.cpp  Line3D.h  MaxDistanceEdge.h  OrientationEdge.cpp  Plane3dVertex.cpp  Point2Line2D.cpp  Point2Line2D.h  Point2Line3D.cpp  Point2Line3D.h  PointonLine.cpp  PointonLine.h  RelativeMagEdge.cpp  SimpleDistanceEdge.cpp  SimpleRobustDistanceEdge.h  ZoEdge.cpp  ZoEdge.h
GraphOptimization/src/: DualFeetIndividually.cpp  DualFeetLocalization.cpp  ImuUwbReferenceComputeTest.cpp  ImuUwbRobustFusion.cpp  ImuUwbRobustFusionGraph.cpp  RobustPDRUWBTester.cpp
LightKF/: LightFilter.cpp  LightFilter.h
Scripts/: BJFusingPreprocess.py  DataLoader.py  RobustKernelVisualize.py  TestUWBData.py  Trilateration.py  UwbLocation.py  Visualize3d.py  XsensePreProcess.py  XsenseProcess.py  __init__.py  mavDataProcess.py  noised_uwb_data_generator.py  test_PDRUWB_data.py  test_numba_cuda.py  time_check.py
TmpResult/: Visualize3d.py
cmake_modules/: FindCholmod.cmake  FindEigen3.cmake  FindQGLViewer.cmake  FindSuiteSparse.cmake  FindThrust.cmake
